--- a/Programming/5_sem (ChMV)/lab6/dbwindow.ui
+++ b/Programming/5_sem (ChMV)/lab6/dbwindow.ui
@@ -11,60 +11,46 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>База данных</string>
   </property>
   <property name="windowIcon">
    <iconset resource="../resources/resources.qrc">
     <normaloff>:/other/logo</normaloff>:/other/logo</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout">
+   <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
      <widget class="QTableView" name="tableView"/>
     </item>
     <item>
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="3" column="0">
-       <widget class="QLineEdit" name="lineEdit_CharSearch">
-        <property name="font">
-         <font>
-          <family>Times New Roman</family>
-         </font>
-        </property>
-       </widget>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QComboBox" name="comboBox"/>
       </item>
-      <item row="3" column="1">
-       <widget class="QLineEdit" name="lineEdit_WordSearch">
-        <property name="font">
-         <font>
-          <family>Times New Roman</family>
-         </font>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="label_CharSearch">
-        <property name="font">
-         <font>
-          <family>Times New Roman</family>
-         </font>
-        </property>
-        <property name="text">
-         <string>Поиск по символам</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QLabel" name="label_WordSearch">
-        <property name="font">
-         <font>
-          <family>Times New Roman</family>
-         </font>
-        </property>
-        <property name="text">
-         <string>Точный поиск</string>
-        </property>
-       </widget>
+      <item>
+       <layout class="QVBoxLayout" name="verticalLayout">
+        <item>
+         <widget class="QLabel" name="label_CharSearch">
+          <property name="font">
+           <font>
+            <family>Times New Roman</family>
+           </font>
+          </property>
+          <property name="text">
+           <string>Поиск по символам</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="lineEdit_CharSearch">
+          <property name="font">
+           <font>
+            <family>Times New Roman</family>
+           </font>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
      </layout>
     </item>
