--- a/Programming/5_sem (ChMV)/lab6/mainwindow.ui
+++ b/Programming/5_sem (ChMV)/lab6/mainwindow.ui
@@ -166,7 +166,7 @@
       <item>
        <widget class="QPushButton" name="pushButtonNext">
         <property name="focusPolicy">
-         <enum>Qt::NoFocus</enum>
+         <enum>Qt::StrongFocus</enum>
         </property>
         <property name="text">
          <string>Получить доступ к БД</string>
